bk_ida/gccida/c2/count_spilled_pseudo
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/count_spilled_pseudo/src/reload1.c:2145:25: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v8 = ( ( unsigned int)( mode_class_0[v6] - 5) < 2) + 1; 
                        ^~~~~~~~~~~~
                        mode_class
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/count_spilled_pseudo/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/count_spilled_pseudo/src/reload1.c:2169:30: error: use of undeclared identifier 'unk_9FF34C'
v13 = ( _DWORD *)( ( char *)&unk_9FF34C + 4 * ( unsigned int)v8 + 4 * v5); 
                             ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/count_spilled_pseudo/src/obj/reload1.o] Error 1
